--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <td id="layout-menu">
 <div class="menu-category">Home</div>
 <div class="menu-item"><a href="index.html" class="current">Quoc-Viet&nbsp;PHAM</a></div>
-<div class="menu-item"><a href="Eduwork.html">Education&nbsp;and&nbsp;Work</a></div>
+<div class="menu-item"><a href="eduwork.html">Education&nbsp;and&nbsp;Work</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="Publication.html">Publication</a></div>
-<div class="menu-item"><a href="Activity.html">Professional&nbsp;Activities</a></div>
-<div class="menu-item"><a href="Grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="Supervision.html">Supervision&nbsp;and&nbsp;Teaching</a></div>
+<div class="menu-item"><a href="publication.html">Publication</a></div>
+<div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
+<div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
+<div class="menu-item"><a href="supervision.html">Supervision&nbsp;and&nbsp;Teaching</a></div>
 <div class="menu-category">Miscellany</div>
 <div class="menu-item"><a href="coursework.html">Courseworks</a></div>
 <div class="menu-item"><a href="dataset.html">Datasets</a></div>
@@ -69,7 +69,7 @@ Research Professor, Ph.D. <br />
 </li>
 <li><p>[12/2021] I have received an award from the Minister of Education (Korea) for outstanding contributions and research excellence. <br /></p>
 </li>
-<li><p>[10/2021] Massive congratulations to <a href="mailto:tu.nguyen@nu.edu.kz">Dr. Tu Nguyen</a>. We won the FDCRGP Grant ($135,000 for 2022-2024) for our research on Edge Learning for Video Surveillance. <br /></p>
+<li><p>[10/2021] <a href="aaa"><font color=red size=+0.5><b>Hot!!!</b></font></a> We won the FDCRGP Grant ($135,000 for 2022-2024) for our research on Edge Learning for Video Surveillance (PI: <a href="mailto:tu.nguyen@nu.edu.kz">Dr. Tu Nguyen</a>). <br /></p>
 </li>
 <li><p>[10/2021] Our work on <a href="https://ieeexplore.ieee.org/document/9584850">DRL for energy-efficient FL-UAV</a> has been accepted by the IEEE Communications Letters. <br /></p>
 </li>
@@ -97,21 +97,50 @@ Research Professor, Ph.D. <br />
 </li>
 <li><p>[01/2021] I have received the <a href="Rv_Award_TVT_2020.pdf">Top Reviewer Award</a> from IEEE Transactions on Vehicular Technology in 2020.</p>
 </li>
-<li><p>[10/2020] HOT!!! I have been invited as an editor of the <a href="https://www.journals.elsevier.com/journal-of-network-and-computer-applications">Journal of Network and Computer Applications</a> <a href="Q1,">IF 6.281</a></p>
+<li><p>[10/2020] <a href="aaa"><font color=red size=+0.5><b>Hot!!!</b></font></a> I have been invited as an editor of the <a href="https://www.journals.elsevier.com/journal-of-network-and-computer-applications">Journal of Network and Computer Applications</a> <a href="Q1,">IF 6.281</a></p>
 </li>
 <li><p>[10/2019] My paper on <a href="https://ieeexplore.ieee.org/document/8917566">MEC-NOMA using coalitional games</a> has been published by the IEEE Transactions on Vehicular Technology.</p>
 </li>
-<li><p>[12/2018] Congratulations!!! for a new 5-years project from Korea NRF.</p>
+<li><p>[12/2018] <a href="aaa"><font color=red size=+0.5><b>Hot!!!</b></font></a> I have received a 5-year project from Korea NRF (Feb. 2019 - Feb. 2024).</p>
 </li>
 </ul>
 <p></div></p>
+<p><div id="Selected Publication"></p>
+<h2>Selected Publication <a href="publication.html"><font color=red size=+0.5><b>(Full Publication)</b></font></a></h2>
+<ol>
+<li><p>T. R. Gadekallu, Q.-V. Pham, D. C. Nguyen, P. K. R. Maddikunta, N. Deepa, B. Prabadevi, P. N. Pathirana, J. Zhao, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9569742">Blockchain for Edge of Things: Applications, Opportunities, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 9, no. 2, pp. 964-988, Jan. 2022.</p>
+</li>
+<li><p>L. Nkenyereye, L. Nkenyereye, Q.-V. Pham, and J. S. Song, &ldquo;<a href="https://ieeexplore.ieee.org/document/9555379">Efficient RSU Selection Scheme for Fog-based Software-Defined Vehicular Network</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 70, no. 11, pp. 12126-12141, Nov. 2021.</p>
+</li>
+<li><p>T. Huynh-The, C.-H. Hua, V.-S. Doan, Q.-V. Pham, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9475953">Accurate Deep CNN-based Waveform Recognition for Intelligent Radar Systems</a>,&rdquo; <i>IEEE Communications Letters</i>, vol. 25, no. 9, pp. 2938-2942, Sep. 2021.</p>
+</li>
+<li><p>T. Huynh-The, V.-S. Doan, C.-H. Hua, Q.-V. Pham, T.-V. Nguyen, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9416299">Accurate LPI Radar Waveform Recognition with CWD-TFA for Deep Convolutional Network</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, vol. 10, no. 8, pp. 1638-1642, Aug. 2021.</p>
+</li>
+<li><p>L. Nkenyereye, J. Y. Hwang, Q.-V. Pham, and J. S. Song, &ldquo;<a href="https://ieeexplore.ieee.org/document/9324778">Virtual IoT Service Slice Functions for Multi-Access Edge Computing Platform</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 8, no. 14, pp. 11233-11248, Jul. 2021.</p>
+</li>
+<li><p>L. Nkenyereye, J. Y. Hwang, Q.-V. Pham, and J. S. Song, &ldquo;<a href="https://ieeexplore.ieee.org/document/9360665">MEIX: Evolving Multi-Access Edge Computing for Industrial Internet-of-Things Services</a>,&rdquo; <i>IEEE Network</i>, vol. 35, no. 3, pp. 147-153, May/Jun. 2021.</p>
+</li>
+<li><p>N.-N. Dao, Q.-V. Pham, N. H. Tu, T. T. Thanh, V. N. Q. Bao, D. S. Lakew, and S. Cho, &ldquo;<a href="https://ieeexplore.ieee.org/document/9358097">Survey on Aerial Radio Access Networks: Toward a Comprehensive 6G Access Infrastructure</a>,&rdquo; <i>IEEE Communications Surveys and Tutorials</i>, vol. 23, no. 2, pp. 1193-1225, Second Quarter 2021.</p>
+</li>
+<li><p>Q.-V. Pham, M. Zeng, R. Ruby, T. Huynh-The, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9374105">UAV Communications for Sustainable Federated Learning</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 70, no. 4, pp. 3944-3948, Apr. 2021.</p>
+</li>
+<li><p>Q.-V. Pham, F. Fang, V. N. Ha, M. J. Piran, M. Le, L. B. Le, W.-J. Hwang, and Z. Ding, &ldquo;<a href="https://ieeexplore.ieee.org/document/9113305">A Survey of Multi-Access Edge Computing in 5G and Beyond: Fundamentals, Technology Integration, and State-of-the-Art</a>,&rdquo; <i>IEEE Access</i>, vol. 8, pp. 116974-117017, Jun. 2020.</p>
+</li>
+<li><p>Q.-V. Pham, S. Mirjalili, N. Kumar, M. Alazab, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/8993843">Whale Optimization Algorithm with Applications to Resource Allocation in Wireless Networks</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 4, pp. 4285-4297, Apr. 2020.</p>
+</li>
+<li><p>T. Huynh-The, C.-H. Hua, Q.-V. Pham, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/8963964">MCNet: An Efficient CNN Architecture for Robust Automatic Modulation Classification</a>,&rdquo; <i>IEEE Communications Letters</i>, vol. 24, no. 4, pp. 811-815, Apr. 2020.</p>
+</li>
+<li><p>Q.-V. Pham, Hoang T. Nguyen, Z. Han, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/8917566">Coalitional Games for Computation Offloading in NOMA-Enabled Multi-Access Edge Computing</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 2, pp. 1982-1993, Feb. 2020.</p>
+</li>
+</ol>
+<p></div></p>
 <p><div id="About Me"></p>
-<h2>About Me</h2>
+<h2>About Me <a href="Curriculum_Vitae_PHAM.pdf"><font color=red size=+0.5><b>(Curriculum Vitae)</b></font></a></h2>
 <p>Quoc-Viet Pham (M&rsquo;18) received the B.S. degree in electronics and telecommunications engineering from the Hanoi University of Science and Technology, Vietnam, in 2013, and the Ph.D. degree in telecommunications engineering from Inje University, Republic of Korea, in 2017. He has been a Research Professor with Pusan National University, Republic of Korea, since Feb. 2020.</p>
 <p>He is specialized in applying convex optimization, game theory, and machine learning to analyze and optimize edge computing and future wireless communications. He has been granted the Korea NRF Funding for outstanding young researchers for the term 2019–2024. He has been a TPC/TPC chair for leading conferences, including IEEE ICC, IEEE VTC, and EAI GameNets. He is an editor of the Journal of Network and Computer Applications (Elsevier), an associate editor of the Frontiers in Communications and Networks, and a lead guest editor of the IEEE Internet of Things Journal. He was also the recipient of the Best Ph.D. Dissertation Award in engineering from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, the golden globe award 2021 from the Ministry of Science and Technology (Vietnam), and the award for outstanding contributions and research excellence from Minister of Education (Korea) in 2021.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-07 15:15:34 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-07 16:37:43 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
