--- a/publication.html
+++ b/publication.html
@@ -13,12 +13,12 @@
 <td id="layout-menu">
 <div class="menu-category">Home</div>
 <div class="menu-item"><a href="index.html">Quoc-Viet&nbsp;PHAM</a></div>
-<div class="menu-item"><a href="Eduwork.html">Education&nbsp;and&nbsp;Work</a></div>
+<div class="menu-item"><a href="eduwork.html">Education&nbsp;and&nbsp;Work</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="Publication.html" class="current">Publication</a></div>
-<div class="menu-item"><a href="Activity.html">Professional&nbsp;Activities</a></div>
-<div class="menu-item"><a href="Grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="Supervision.html">Supervision&nbsp;and&nbsp;Teaching</a></div>
+<div class="menu-item"><a href="publication.html">Publication</a></div>
+<div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
+<div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
+<div class="menu-item"><a href="supervision.html">Supervision&nbsp;and&nbsp;Teaching</a></div>
 <div class="menu-category">Miscellany</div>
 <div class="menu-item"><a href="coursework.html">Courseworks</a></div>
 <div class="menu-item"><a href="dataset.html">Datasets</a></div>
@@ -84,9 +84,9 @@
 </li>
 <li><p>Parimala M, Swarna Priya R M, <b>Q.-V. Pham</b>, K. Dev, P. K. R. Maddikunta, T. R. Gadekallu, and T. Huynh-The, &ldquo;<a href="https://arxiv.org/abs/2101.00798">Fusion of Federated Learning and Industrial Internet of Things: A Survey</a>,&rdquo; under review, <i>Future Generation Computer Systems</i>.</p>
 </li>
-<li><p>Prabadevi B, <b>Q.-V. Pham</b>, M. Liyanage, N Deepa, Mounik VVSS, S. Reddy, P. K. R. Maddikunta, N. Khare, T. R. Gadekallu, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2101.08013">Deep Learning for Intelligent Demand Response and Smart Grids: A Comprehensive Survey</a>,&rdquo; under review, <i>Computer Science Review</i>.</p>
+<li><p>B. Prabadevi, <b>Q.-V. Pham</b>, M. Liyanage, N. Deepa, Mounik VVSS, S. Reddy, P. K. R. Maddikunta, N. Khare, T. R. Gadekallu, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2101.08013">Deep Learning for Intelligent Demand Response and Smart Grids: A Comprehensive Survey</a>,&rdquo; under review, <i>Computer Science Review</i>.</p>
 </li>
-<li><p>N. Deepa, <b>Q.-V. Pham</b>, D. C. Nguyen, S. Bhattacharya, Prabadevi B, T. R. Gadekallu, P. K. R. Maddikunta, F. Fang, and P. N. Pathirana, &ldquo;<a href="https://arxiv.org/abs/2009.00858">A Survey on Blockchain for Big Data: Approaches, Opportunities, and Future Directions</a>,&rdquo; under revision, <i>Future Generation Computer Systems</i>.</p>
+<li><p>N. Deepa, <b>Q.-V. Pham</b>, D. C. Nguyen, S. Bhattacharya, B. Prabadevi, T. R. Gadekallu, P. K. R. Maddikunta, F. Fang, and P. N. Pathirana, &ldquo;<a href="https://arxiv.org/abs/2009.00858">A Survey on Blockchain for Big Data: Approaches, Opportunities, and Future Directions</a>,&rdquo; under revision, <i>Future Generation Computer Systems</i>.</p>
 </li>
 <li><p>S. A. Khowaja, K. Dev, P. Khuwaja, <b>Q.-V. Pham</b>, N. M. F. Qureshi, P. Bellavista, and M. Magarini, &ldquo;<a href="">IIFNet: An Efficient Preamble Detection Approach for 6G and Beyond Networks</a>,&rdquo; under revision, <i>IEEE Network</i>.</p>
 </li>
@@ -117,9 +117,9 @@
 </li>
 <li><p>H. Yang, R. Ruby, <b>Q.-V. Pham</b>, and K. Wu, &ldquo;<a href="https://ieeexplore.ieee.org/document/9525446">Aiding a Disaster Spot via Multi-UAV-based IoT Networks: Energy and Mission Completion Time-Aware Trajectory Optimization</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press. </p>
 </li>
-<li><p>P. K. R. Maddikunta, <b>Q.-V. Pham</b>, Prabadevi B, N Deepa, K. Dev, T. R. Gadekallu, R. Ruby, and M. Liyanage, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S2452414X21000558">Industry 5.0: A Survey on Enabling Technologies and Potential Applications</a>,&rdquo; <i>Journal of Industrial Information Integration</i>, in press.</p>
+<li><p>P. K. R. Maddikunta, <b>Q.-V. Pham</b>, B. Prabadevi, N. Deepa, K. Dev, T. R. Gadekallu, R. Ruby, and M. Liyanage, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S2452414X21000558">Industry 5.0: A Survey on Enabling Technologies and Potential Applications</a>,&rdquo; <i>Journal of Industrial Information Integration</i>, in press.</p>
 </li>
-<li><p>T. R. Gadekallu, <b>Q.-V. Pham</b>, D. C. Nguyen, P. K. R. Maddikunta, N Deepa, Prabadevi B, P. N. Pathirana, J. Zhao, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9569742">Blockchain for Edge of Things: Applications, Opportunities, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 9, no. 2, pp. 964-988, Jan. 2022.</p>
+<li><p>T. R. Gadekallu, <b>Q.-V. Pham</b>, D. C. Nguyen, P. K. R. Maddikunta, N. Deepa, B. Prabadevi, P. N. Pathirana, J. Zhao, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9569742">Blockchain for Edge of Things: Applications, Opportunities, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 9, no. 2, pp. 964-988, Jan. 2022.</p>
 </li>
 </ol>
 <p></div></p>
@@ -150,7 +150,7 @@
 </li>
 <li><p><b>Q.-V. Pham</b>, N. T. Nguyen, T. Huynh-The, L. B. Le, K. Lee, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9448043">Intelligent Radio Signal Processing: A Survey</a>,&rdquo; <i>IEEE Access</i>, vol. 9, pp. 83818-83850, Jun. 2021.</p>
 </li>
-<li><p>Prabadevi B, N Deepa, <b>Q.-V. Pham</b>, D. C. Nguyen, P. K. R. Maddikunta, T. R. Gadekallu, P. N. Pathirana, and O. Dobre, &ldquo;<a href="https://ieeexplore.ieee.org/document/9409843">Toward Blockchain for Edge-of-Things: A New Paradigm, Opportunities, and Future Directions</a>,&rdquo; <i>IEEE Internet of Things Magazine</i>, vol. 4, no. 2, pp. 102-108, Jun. 2021.</p>
+<li><p>B. Prabadevi, N. Deepa, <b>Q.-V. Pham</b>, D. C. Nguyen, P. K. R. Maddikunta, T. R. Gadekallu, P. N. Pathirana, and O. Dobre, &ldquo;<a href="https://ieeexplore.ieee.org/document/9409843">Toward Blockchain for Edge-of-Things: A New Paradigm, Opportunities, and Future Directions</a>,&rdquo; <i>IEEE Internet of Things Magazine</i>, vol. 4, no. 2, pp. 102-108, Jun. 2021.</p>
 </li>
 <li><p>L. Nkenyereye, J. Y. Hwang, <b>Q.-V. Pham</b>, and J. S. Song, &ldquo;<a href="https://ieeexplore.ieee.org/document/9360665">MEIX: Evolving Multi-Access Edge Computing for Industrial Internet-of-Things Services</a>,&rdquo; <i>IEEE Network</i>, vol. 35, no. 3, pp. 147-153, May/Jun. 2021.</p>
 </li>
@@ -291,7 +291,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-07 15:14:46 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-07 16:32:31 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
