--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@ Research Professor, Ph.D. <br />
 </ol>
 <p></div></p>
 <p><div id="About Me"></p>
-<h2>About Me <a href="Curriculum_Vitae_PHAM.pdf"><font color=red size=+0.5><b>(Curriculum Vitae)</b></font></a></h2>
+<h2>About Me <a href="Misc\Curriculum_Vitae_PHAM.pdf"><font color=red size=+0.5><b>(Curriculum Vitae)</b></font></a></h2>
 <p>Quoc-Viet Pham (M&rsquo;18) received the B.S. degree in electronics and telecommunications engineering from the Hanoi University of Science and Technology, Vietnam, in 2013, and the Ph.D. degree in telecommunications engineering from Inje University, Republic of Korea, in 2017. He has been a Research Professor with Pusan National University, Republic of Korea, since Feb. 2020.</p>
 <p>He is specialized in applying convex optimization, game theory, and machine learning to analyze and optimize edge computing and future wireless communications. He has been granted the Korea NRF Funding for outstanding young researchers for the term 2019–2024. He has been a TPC/TPC chair for leading conferences, including IEEE ICC, IEEE VTC, and EAI GameNets. He is an editor of the Journal of Network and Computer Applications (Elsevier), an associate editor of the Frontiers in Communications and Networks, and a lead guest editor of the IEEE Internet of Things Journal. He was also the recipient of the Best Ph.D. Dissertation Award in engineering from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, the golden globe award 2021 from the Ministry of Science and Technology (Vietnam), and the award for outstanding contributions and research excellence from Minister of Education (Korea) in 2021.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-07 16:37:43 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-07 16:46:16 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
