--- a/publication.html
+++ b/publication.html
@@ -12,7 +12,7 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Home</div>
-<div class="menu-item"><a href="index.html">Quoc-Viet&nbsp;PHAM</a></div>
+<div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="eduwork.html">Education&nbsp;and&nbsp;Work</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publication.html">Publication</a></div>
@@ -282,16 +282,16 @@
 <p><div id="Theses"></p>
 <h2>Theses</h2>
 <ul>
-<li><p>Q.-V. Pham, &ldquo;<a href="Archive/PHAM_MS_Thesis.pdf">Fair and Energy-Efficient Resource Allocation Optimization in Wireless Networks</a>,&rdquo; PhD Thesis, Inje University, Aug. 2017. (Best PhD Award, Ranking</p>
+<li><p>Q.-V. Pham, &ldquo;<a href="Archive/PHAM_PhD_Thesis.pdf">Fair and Energy-Efficient Resource Allocation Optimization in Wireless Networks</a>,&rdquo; PhD Thesis, Inje University, Aug. 2017. (Best PhD Award, Ranking</p>
 </li>
-<li><p>Q.-V. Pham &ldquo;<a href="Archive/PHAM_PhD_Thesis.pdf">Multi-Timescale Cross-Layer Design in Wireless Multihop Networks</a>,&rdquo; M.S. Thesis, Inje University, Aug. 2015.</p>
+<li><p>Q.-V. Pham &ldquo;<a href="Archive/PHAM_MS_Thesis.pdf">Multi-Timescale Cross-Layer Design in Wireless Multihop Networks</a>,&rdquo; M.S. Thesis, Inje University, Aug. 2015.</p>
 </li>
 <li><p>Q.-V. Pham, &ldquo;<a href="">Building an Observational Data Processing and Archiving Center for Automatic Water Level Gathering and Alarming System</a>&rdquo; (in Vietnamese), B.S. Thesis, Hanoi University of Science and Technology, Aug. 2013.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-07 16:45:32 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-07 16:51:22 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
