--- a/eduwork.html
+++ b/eduwork.html
@@ -12,8 +12,8 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Home</div>
-<div class="menu-item"><a href="index.html">Quoc-Viet&nbsp;PHAM</a></div>
-<div class="menu-item"><a href="eduwork.html">Education&nbsp;and&nbsp;Work</a></div>
+<div class="menu-item"><a href="index.html">Home</a></div>
+<div class="menu-item"><a href="eduwork.html" class="current">Education&nbsp;and&nbsp;Work</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publication.html">Publication</a></div>
 <div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
@@ -64,7 +64,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-07 16:02:37 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-07 16:53:40 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
