--- a/supervision.html
+++ b/supervision.html
@@ -12,7 +12,7 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Home</div>
-<div class="menu-item"><a href="index.html">Quoc-Viet&nbsp;PHAM</a></div>
+<div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="eduwork.html">Education&nbsp;and&nbsp;Work</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publication.html">Publication</a></div>
@@ -78,7 +78,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-07 16:02:16 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-07 18:06:29 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
