--- a/coursework.html
+++ b/coursework.html
@@ -12,13 +12,13 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Home</div>
-<div class="menu-item"><a href="index.html">Quoc-Viet&nbsp;PHAM</a></div>
-<div class="menu-item"><a href="Eduwork.html">Education&nbsp;and&nbsp;Work</a></div>
+<div class="menu-item"><a href="index.html">Home</a></div>
+<div class="menu-item"><a href="eduwork.html">Education&nbsp;and&nbsp;Work</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="Publication.html">Publication</a></div>
-<div class="menu-item"><a href="Activity.html">Professional&nbsp;Activities</a></div>
-<div class="menu-item"><a href="Grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="Supervision.html">Supervision&nbsp;and&nbsp;Teaching</a></div>
+<div class="menu-item"><a href="publication.html">Publication</a></div>
+<div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
+<div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
+<div class="menu-item"><a href="supervision.html">Supervision&nbsp;and&nbsp;Teaching</a></div>
 <div class="menu-category">Miscellany</div>
 <div class="menu-item"><a href="coursework.html" class="current">Courseworks</a></div>
 <div class="menu-item"><a href="dataset.html">Datasets</a></div>
@@ -59,7 +59,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-07 15:18:46 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-07 18:06:37 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
