--- a/grantaward.html
+++ b/grantaward.html
@@ -70,7 +70,7 @@ Pusan National University</p>
 </li>
 <li><p>Top Reviewer Award from IEEE Transactions on Vehicular Technology, 2020.</p>
 </li>
-<li><p>Best PhD dissertation (rank</p>
+<li><p>Best PhD dissertation (rank #1) in engineering from Inje University, 2017.</p>
 </li>
 <li><p>Research scholarship for excellent students, Inje University, 2016-2017.</p>
 </li>
@@ -79,7 +79,7 @@ Pusan National University</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-07 18:06:20 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-07 18:18:17 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
