--- a/publication.html
+++ b/publication.html
@@ -183,7 +183,7 @@
 <p><div id="2020"></p>
 <h2>2020</h2>
 <ol>
-<li><p>M. J. Piran, <b>Q.-V. Pham</b>, S. M. Riazul Islam, S. Cho, B. Bae, D.-Y. Suh, and Z. Han, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S1084804520302332">Multimedia Communication over Cognitive Radio Networks from QoS<i>QoE Perspective: A Comprehensive Survey</a>,&rdquo; </i>Journal of Network and Computer Applications/, vol. 172, no. 10, pp. 102759, Dec. 2020.</p>
+<li><p>M. J. Piran, <b>Q.-V. Pham</b>, S. M. Riazul Islam, S. Cho, B. Bae, D.-Y. Suh, and Z. Han, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S1084804520302332">Multimedia Communication over Cognitive Radio Networks from QoS/QoE Perspective: A Comprehensive Survey</a>,&rdquo; <i>Journal of Network and Computer Applications</i>, vol. 172, no. 10, pp. 102759, Dec. 2020.</p>
 </li>
 <li><p>T.-T. Nguyen, <b>Q.-V. Pham</b>, V.-D. Nguyen, J.-H. Lee, and Y.-H. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9149891">Resource Allocation for Energy Efficiency in OFDMA-Enabled WPCN</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, vol. 9, no. 12, pp. 2049-2053, Dec. 2020.</p>
 </li>
@@ -291,7 +291,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-07 16:51:22 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-07 21:32:43 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
