--- a/publication.html
+++ b/publication.html
@@ -106,7 +106,7 @@
 </li>
 <li><p>D. C. Nguyen, <b>Q.-V. Pham</b>, P. N. Pathirana, M. Ding, A. Seneviratne, J. Lin, O. A. Dobre, and W.-J. Hwang, &ldquo;<a href="https://www.researchgate.net/publication/356268433_Federated_Learning_for_Smart_Healthcare_A_Survey">Federated Learning for Smart Healthcare: A Survey</a>,&rdquo; <i>ACM Computing Surveys</i>, in press.</p>
 </li>
-<li><p>M. Alazab, Swarna Priya RM, Parimala M, P. K. R. Maddikunta, T. R. Gadekallu, and Q.-V. Pham, &ldquo;<a href="https://ieeexplore.ieee.org/document/9566732">Federated Learning for Cybersecurity: Concepts, Challenges and Future Directions</a>,&rdquo; <i>IEEE Transactions on Industrial Informatics</i>, in press.</p>
+<li><p>M. Alazab, Swarna Priya RM, Parimala M, P. K. R. Maddikunta, T. R. Gadekallu, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://ieeexplore.ieee.org/document/9566732">Federated Learning for Cybersecurity: Concepts, Challenges and Future Directions</a>,&rdquo; <i>IEEE Transactions on Industrial Informatics</i>, in press.</p>
 </li>
 <li><p>W. Wang, F. H. Memon, Z. Lian, H. Xu, T. R. Gadekallu, <b>Q.-V. Pham</b>, K. Dev, and C. Su, &ldquo;<a href="https://ieeexplore.ieee.org/document/9555212">Secure-Enhanced Federated Learning for AI-Empowered Electric Vehicle Energy Prediction</a>,&rdquo; <i>IEEE Consumer Electronics Magazine</i>, in press.</p>
 </li>
@@ -288,7 +288,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-07 23:20:59 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-07 23:26:54 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
