--- a/publication.html
+++ b/publication.html
@@ -139,7 +139,7 @@
 </li>
 <li><p>P. K. R. Maddikunta, S. Hakak, M. Alazab, S. Bhattacharya, T. R. Gadekallu, W. Z. Khan, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://ieeexplore.ieee.org/document/9316211">Unmanned Aerial Vehicles in Smart Agriculture: Applications, Requirements and Challenges</a>,&rdquo; <i>IEEE Sensors Journal</i>, vol. 21, no. 6, pp. 17608-17619, Aug. 2021.</p>
 </li>
-<li><p>T. Huynh-The, V.-S. Doan, C.-H. Hua, <b>Q.-V. Pham</b>, T.-V. Nguyen, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9416299">Accurate LPI Radar Waveform Recognition with CWD-TFA for Deep Convolutional Network</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, vol. 10, no. 8, pp. 1638-1642, Aug. 2021. <a href="https://github.com/vannguyentoan/LPI-Radar-Waveform-Recognition">MATLAB Code</a></p>
+<li><p>T. Huynh-The, V.-S. Doan, C.-H. Hua, <b>Q.-V. Pham</b>, T.-V. Nguyen, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9416299">Accurate LPI Radar Waveform Recognition with CWD-TFA for Deep Convolutional Network</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, vol. 10, no. 8, pp. 1638-1642, Aug. 2021. [<a href="https://github.com/vannguyentoan/LPI-Radar-Waveform-Recognition">MATLAB Code</a>]</p>
 </li>
 <li><p>R. L. Kumar, <b>Q.-V. Pham</b>, F. Khan, M. J. Piran, K. Dev, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S1874490721001270">Blockchain for Securing Aerial Communications: Potentials, Solutions, and Research Directions</a>,&rdquo; <i>Physical Communication</i>, vol. 47, pp. 101390, Aug. 2021</p>
 </li>
@@ -157,7 +157,7 @@
 </li>
 <li><p>N.-N. Dao, <b>Q.-V. Pham</b>, N. H. Tu, T. T. Thanh, V. N. Q. Bao, D. S. Lakew, and S. Cho, &ldquo;<a href="https://ieeexplore.ieee.org/document/9358097">Survey on Aerial Radio Access Networks: Toward a Comprehensive 6G Access Infrastructure</a>,&rdquo; <i>IEEE Communications Surveys and Tutorials</i>, vol. 23, no. 2, pp. 1193-1225, Second Quarter 2021.</p>
 </li>
-<li><p><b>Q.-V. Pham</b>, M. Zeng, R. Ruby, T. Huynh-The, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9374105">UAV Communications for Sustainable Federated Learning</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 70, no. 4, pp. 3944-3948, Apr. 2021. <a href="https://www.dropbox.com/s/frhhm9nlfx1pweg/Matlab_Code.zip?dl=0">MATLAB Code</a></p>
+<li><p><b>Q.-V. Pham</b>, M. Zeng, R. Ruby, T. Huynh-The, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9374105">UAV Communications for Sustainable Federated Learning</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 70, no. 4, pp. 3944-3948, Apr. 2021. [<a href="https://www.dropbox.com/s/frhhm9nlfx1pweg/Matlab_Code.zip?dl=0">MATLAB Code</a>]</p>
 </li>
 <li><p>C. de Alwis, A. Kalla, <b>Q.-V. Pham</b>, P. Kumar, K. Dev, W.-J. Hwang, and M. Liyanage, &lsquo;&lsquo;<a href="https://ieeexplore.ieee.org/document/9397776">Survey on 6G Frontiers: Trends, Applications, Requirements, Technologies and Future Research</a>," <i>IEEE Open Journal of the Communications Society</i>, vol. 2, pp. 836-886, Apr. 2021.</p>
 </li>
@@ -198,9 +198,9 @@
 </li>
 <li><p>N. Maurice, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9102308">Online Computation Offloading in NOMA-based Multi-Access Edge Computing: A Deep Reinforcement Learning Approach</a>,&rdquo; <i>IEEE Access</i>, vol. 8, pp. 99098-99109, May 2020.</p>
 </li>
-<li><p><b>Q.-V. Pham</b>, S. Mirjalili, N. Kumar, M. Alazab, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/8993843">Whale Optimization Algorithm with Applications to Resource Allocation in Wireless Networks</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 4, pp. 4285-4297, Apr. 2020. <a href="https://github.com/vietpq90/WOA_5G_Communications">MATLAB Code</a></p>
+<li><p><b>Q.-V. Pham</b>, S. Mirjalili, N. Kumar, M. Alazab, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/8993843">Whale Optimization Algorithm with Applications to Resource Allocation in Wireless Networks</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 4, pp. 4285-4297, Apr. 2020. [<a href="https://github.com/vietpq90/WOA_5G_Communications">MATLAB Code</a>]</p>
 </li>
-<li><p>T. Huynh-The, C.-H. Hua, <b>Q.-V. Pham</b>, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/8963964">MCNet: An Efficient CNN Architecture for Robust Automatic Modulation Classification</a>,&rdquo; <i>IEEE Communications Letters</i>, vol. 24, no. 4, pp. 811-815, Apr. 2020. <a href="https://github.com/ThienHuynhThe/MCNet">MATLAB Code</a></p>
+<li><p>T. Huynh-The, C.-H. Hua, <b>Q.-V. Pham</b>, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/8963964">MCNet: An Efficient CNN Architecture for Robust Automatic Modulation Classification</a>,&rdquo; <i>IEEE Communications Letters</i>, vol. 24, no. 4, pp. 811-815, Apr. 2020. [<a href="https://github.com/ThienHuynhThe/MCNet">MATLAB Code</a>]</p>
 </li>
 <li><p><b>Q.-V. Pham</b>, Hoang T. Nguyen, Z. Han, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/8917566">Coalitional Games for Computation Offloading in NOMA-Enabled Multi-Access Edge Computing</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 2, pp. 1982-1993, Feb. 2020.</p>
 </li>
@@ -288,7 +288,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-07 23:26:54 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-07 23:35:16 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
