--- a/eduwork.html
+++ b/eduwork.html
@@ -31,9 +31,9 @@
 <p><div id="Education"></p>
 <h2>Education</h2>
 <ul>
-<li><p>2015 - 2017: Doctor of Philosophy (Ph.D.) in Telecommunications Systems at Inje University, South Korea</p>
+<li><p>2015 - 2017: Doctor of Philosophy (Ph.D.) in Telecommunications Systems at Inje University, Gimhae, South Korea</p>
 </li>
-<li><p>2013 - 2015: Master of Science (MS) Degree in Computer Science at Inje University, South Korea</p>
+<li><p>2013 - 2015: Master of Science (MS) Degree in Computer Science at Inje University, Gimhae, South Korea</p>
 </li>
 <li><p>2008 - 2013: Bachelor Degree (BE) in Electronics and Telecommunications Engineering at Hanoi University of Science and Technology, Hanoi, Vietnam</p>
 </li>
@@ -64,7 +64,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-07 18:04:19 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-08 14:56:03 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
