--- a/publication.html
+++ b/publication.html
@@ -42,7 +42,7 @@
 <p><div id="Book Chapters"></p>
 <h2>Book Chapters</h2>
 <ol>
-<li><p>N.-N. Dao, N.-T. Dinh, Q.-V. Pham, T. V. Phan, S. Cho, and T. Braun, &ldquo;<a href="https://www.springerprofessional.de/en/vulnerabilities-in-fog-edge-computing-from-architectural-perspec/18727608">Vulnerabilities in Fog/Edge Computing from Architectural Perspectives</a>,&rdquo; Chapter 11, in <a href="https://link.springer.com/book/10.1007/978-3-030-57328-7">Fog/Edge Computing For Security, Privacy, and Applications], Springer, 2021 [Eds</a>.</p>
+<li><p>N.-N. Dao, N.-T. Dinh, <b>Q.-V. Pham</b>, T. V. Phan, S. Cho, and T. Braun, &ldquo;<a href="https://www.springerprofessional.de/en/vulnerabilities-in-fog-edge-computing-from-architectural-perspec/18727608">Vulnerabilities in Fog/Edge Computing from Architectural Perspectives</a>,&rdquo; Chapter 11, in <a href="https://link.springer.com/book/10.1007/978-3-030-57328-7">Fog/Edge Computing For Security, Privacy, and Applications], Springer, 2021 [Eds</a>.</p>
 </li>
 <li><p><b>Q.-V. Pham</b>, D. C. Nguyen, T. Huynh-The, W.-J. Hwang, and P. N. Pathirana, &ldquo;<a href="">Artificial Intelligence and Big Data for COVID-19 and Social Distancing</a>,&rdquo; Chapter 5, in Enabling Technologies for Social Distancing: Fundamentals, concepts and solutions, IET, expected 2022 <a href="Eds">Eds</a>.</p>
 </li>
@@ -70,8 +70,6 @@
 <li><p>T. Huynh-The, T.-V. Nguyen, <b>Q.-V. Pham</b>, V.-S. Doan, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">Efficient Convolutional Networks for Robust Automatic Modulation Classification in OFDM-Based Wireless Systems</a>,&rdquo; under revision, <i>IEEE Systems Journals</i>.</p>
 </li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">High-Performance Convolutional Network for RF-Based Drone Surveillance</a>,&rdquo; under review, <i>IEEE Systems Journals</i>.</p>
-</li>
-<li><p>A. Samanta, <b>Q.-V. Pham</b>, D.-T. Do, N.-N. Dao, A. Muthanna, and S. Cho, &ldquo;<a href="">mISO: Incentivizing Demand-Agnostic Microservices for Edge Computing in Mobile IoT Networks</a>,&rdquo; under revision, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
 <li><p>T. R. Gadekallu, <b>Q.-V. Pham</b>, T. Huynh-The, S. Bhattacharya, P. K. R. Maddikunta, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2110.04160">Federated Learning for Big Data: A Survey on Opportunities, Applications, and Future Directions</a>,&rdquo; under review, <i>ACM Computing Surveys</i>.</p>
 </li>
@@ -180,13 +178,13 @@
 <p><div id="2020"></p>
 <h2>2020</h2>
 <ol>
-<li><p>M. J. Piran, <b>Q.-V. Pham</b>, S. M. Riazul Islam, S. Cho, B. Bae, D.-Y. Suh, and Z. Han, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S1084804520302332">Multimedia Communication over Cognitive Radio Networks from QoS/QoE Perspective: A Comprehensive Survey</a>,&rdquo; <i>Journal of Network and Computer Applications</i>, vol. 172, no. 10, pp. 102759, Dec. 2020.</p>
+<li><p>M. J. Piran, <b>Q.-V. Pham</b>, S. M. R. Islam, S. Cho, B. Bae, D.-Y. Suh, and Z. Han, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S1084804520302332">Multimedia Communication over Cognitive Radio Networks from QoS/QoE Perspective: A Comprehensive Survey</a>,&rdquo; <i>Journal of Network and Computer Applications</i>, vol. 172, no. 10, pp. 102759, Dec. 2020.</p>
 </li>
 <li><p>T.-T. Nguyen, <b>Q.-V. Pham</b>, V.-D. Nguyen, J.-H. Lee, and Y.-H. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9149891">Resource Allocation for Energy Efficiency in OFDMA-Enabled WPCN</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, vol. 9, no. 12, pp. 2049-2053, Dec. 2020.</p>
 </li>
 <li><p>F. Fang, Y. Xu, <b>Q.-V. Pham</b>, and Z. Ding, &ldquo;<a href="https://ieeexplore.ieee.org/document/9197675">Energy-Efficient Design of IRS-NOMA Networks</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 11, pp. 14088-14092, Nov. 2020.</p>
 </li>
-<li><p>Huong-Giang T. Pham, <b>Q.-V. Pham</b>, Anh T. Pham, and Chuyen T. Nguyen, &ldquo;<a href="https://ieeexplore.ieee.org/document/9226522">Joint Task Offloading and Resource Management in NOMA-based MEC Systems: A Swarm Intelligence Approach</a>,&rdquo; <i>IEEE Access</i>, vol. 8, pp. 190463-190474, Oct. 2020.</p>
+<li><p>Huong-Giang T. Pham, <b>Q.-V. Pham</b>, A. T. Pham, and C. T. Nguyen, &ldquo;<a href="https://ieeexplore.ieee.org/document/9226522">Joint Task Offloading and Resource Management in NOMA-based MEC Systems: A Swarm Intelligence Approach</a>,&rdquo; <i>IEEE Access</i>, vol. 8, pp. 190463-190474, Oct. 2020.</p>
 </li>
 <li><p><b>Q.-V. Pham</b>, T. Huynh-The, M. Alazab, J. Zhao, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9075277">Sum-Rate Maximization for UAV-assisted Visible Light Communications using NOMA: Swarm Intelligence meets Machine Learning</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 7, no. 10, pp. 10375-10387, Oct. 2020.</p>
 </li>
@@ -288,7 +286,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-07 23:35:16 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-08 14:55:38 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
