--- a/publication.html
+++ b/publication.html
@@ -42,11 +42,11 @@
 <p><div id="Book Chapters"></p>
 <h2>Book Chapters</h2>
 <ol>
-<li><p>N.-N. Dao, N.-T. Dinh, <b>Q.-V. Pham</b>, T. V. Phan, S. Cho, and T. Braun, &ldquo;<a href="https://www.springerprofessional.de/en/vulnerabilities-in-fog-edge-computing-from-architectural-perspec/18727608">Vulnerabilities in Fog/Edge Computing from Architectural Perspectives</a>,&rdquo; Chapter 11, in <a href="https://link.springer.com/book/10.1007/978-3-030-57328-7">Fog/Edge Computing For Security, Privacy, and Applications], Springer, 2021 [Eds</a>.</p>
+<li><p>N.-N. Dao, N.-T. Dinh, <b>Q.-V. Pham</b>, T. V. Phan, S. Cho, and T. Braun, &ldquo;<a href="https://www.springerprofessional.de/en/vulnerabilities-in-fog-edge-computing-from-architectural-perspec/18727608">Vulnerabilities in Fog/Edge Computing from Architectural Perspectives</a>,&rdquo; Chapter 11, in <a href="https://link.springer.com/book/10.1007/978-3-030-57328-7">Fog/Edge Computing For Security, Privacy, and Applications</a>, Springer, 2021 [Eds].</p>
 </li>
-<li><p><b>Q.-V. Pham</b>, D. C. Nguyen, T. Huynh-The, W.-J. Hwang, and P. N. Pathirana, &ldquo;<a href="">Artificial Intelligence and Big Data for COVID-19 and Social Distancing</a>,&rdquo; Chapter 5, in Enabling Technologies for Social Distancing: Fundamentals, concepts and solutions, IET, expected 2022 <a href="Eds">Eds</a>.</p>
+<li><p><b>Q.-V. Pham</b>, D. C. Nguyen, T. Huynh-The, W.-J. Hwang, and P. N. Pathirana, &ldquo;<a href="">Artificial Intelligence and Big Data for COVID-19 and Social Distancing</a>,&rdquo; Chapter 5, in Enabling Technologies for Social Distancing: Fundamentals, concepts and solutions, IET, expected 2022 [Eds].</p>
 </li>
-<li><p>Dinh C. Nguyen, <b>Q.-V. Pham</b>, M. Ding, P. N. Pathirana, and A. Seneviratne, &ldquo;<a href="">Security and Privacy and Blockchain Applications in COVID-19 Detection and Social Distancing</a>,&rdquo; Chapter 7, in Enabling Technologies for Social Distancing: Fundamentals, concepts and solutions, IET, expected 2022 <a href="Eds">Eds</a>.</p>
+<li><p>Dinh C. Nguyen, <b>Q.-V. Pham</b>, M. Ding, P. N. Pathirana, and A. Seneviratne, &ldquo;<a href="">Security and Privacy and Blockchain Applications in COVID-19 Detection and Social Distancing</a>,&rdquo; Chapter 7, in Enabling Technologies for Social Distancing: Fundamentals, concepts and solutions, IET, expected 2022 [Eds].</p>
 </li>
 </ol>
 <p></div></p>
@@ -286,7 +286,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-08 14:55:38 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-08 15:14:46 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
