--- a/publication.html
+++ b/publication.html
@@ -266,7 +266,7 @@
 </li>
 <li><p>H. N. T. Luan, <b>Q.-V. Pham</b>, Q. D. Nguyen, X.-Q. Pham, V. D. Nguyen, and E.-N. Huh, &ldquo;<a href="https://link.springer.com/chapter/10.1007/978-3-030-19063-7_11">Energy Efficient Computation Offloading with Multi-MEC Servers in 5G two-tier Heterogeneous Networks</a>,&rdquo; in <i>International Conference on Ubiquitous Information Management and Communication</i>, Phuket Thailand, Jan. 2019.</p>
 </li>
-<li><p><b>Q.-V. Pham</b> and W.-J. Hwang, &ldquo;<a href="https://www.dropbox.com/s/krr79m9o6kntw97/MITA_2016_paper_8.pdf?dl=0">Fair and Energy-Efficient Power Control in Spectrum-Sharing Wireless Networks</a>,&rdquo; in <i>The 12th International Conference on Multimedia Information Technology and Applications (MITA2016)</i>, Luang Prabang, Laos, Jun. 2016.</p>
+<li><p><b>Q.-V. Pham</b> and W.-J. Hwang, &ldquo;<a href="https://www.dropbox.com/s/krr79m9o6kntw97/MITA_2016_paper_8.pdf?dl=0">Fair and Energy-Efficient Power Control in Spectrum-Sharing Wireless Networks</a>,&rdquo; in <i>International Conference on Multimedia Information Technology and Applications (MITA2016)</i>, Luang Prabang, Laos, Jun. 2016.</p>
 </li>
 <li><p><b>Q.-V. Pham</b> and W.-J. Hwang, &ldquo;<a href="">Outage Constrained Resource Allocation for Energy Efficiency in Coordinated Multicell OFDMA Networks</a>,&rdquo; in <i>Japan-Korea Joint Workshop on Complex Communication Sciences (JKCCS2016)</i>, Busan, Korea, Oct. 2016.</p>
 </li>
@@ -286,7 +286,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-08 15:14:46 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-08 15:29:37 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
