--- a/supervision.html
+++ b/supervision.html
@@ -39,20 +39,22 @@
 </li>
 <li><p>2018 Spring: Convex Optimization</p>
 </li>
-<li><p>2016-2017: Teaching assistant, COURSE: Fundamentals of Java and Android Programming</p>
+<li><p>2017: Teaching assistant, COURSE: Android Programming</p>
+</li>
+<li><p>2016: Teaching assistant, COURSE: Fundamentals of Java</p>
 </li>
 </ul>
 <p></div></p>
 <p><div id="Current Students"></p>
 <h2>Current Students</h2>
 <ul>
-<li><p>Le Thi Mai [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2021/03-Present] - Topic: Wireless AI and Aerial Access Networks</p>
+<li><p>Le Thi Mai [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2021/03-Present] - Topic: Wireless AI and aerial access networks</p>
 </li>
-<li><p>Swe Swe Latt [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present] - Topic: federated learning and 6G resource optimization</p>
+<li><p>Swe Swe Latt [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present] - Topic: Federated learning and 6G resource optimization</p>
 </li>
-<li><p>Dao Thien Thanh [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present] - Topic: deep learning and depth map</p>
+<li><p>Dao Thien Thanh [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present] - Topic: Deep learning and depth map</p>
 </li>
-<li><p>Nguyen Minh Duong [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present] - Topic: deep reinforcement learning and federated learning for 6G resource optimization</p>
+<li><p>Nguyen Minh Duong [<a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present] - Topic: Deep reinforcement learning and federated learning for 6G resource optimization</p>
 </li>
 <li><p>Nadia Iradukunda [<a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/09-Present] - Topic: UAV communications in 5G and beyond</p>
 </li>
@@ -61,24 +63,24 @@
 <p><div id="Alumnus"></p>
 <h2>Alumnus</h2>
 <ul>
-<li><p>Le Thi Mai [<a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/03-2021/02] - Topic: swarm intelligence for D2D communications</p>
+<li><p>Le Thi Mai [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/03-2021/02] - Topic: Swarm intelligence for D2D communications</p>
 </li>
-<li><p>Vo Ta Hoang [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2020/02] : resource allocation for mobile edge computing systems</p>
+<li><p>Vo Ta Hoang [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2020/02] : Resource allocation for mobile edge computing systems</p>
 </li>
-<li><p>Hoang Huu Trung [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2018/09-2021/02]: machine learning for healthcare applications</p>
+<li><p>Hoang Huu Trung [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2018/09-2021/02]: Machine learning for healthcare applications</p>
 </li>
-<li><p>Nguyen Tien Hoang [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08] - Topic: coalitional games for NOMA-MEC computation offloading </p>
+<li><p>Nguyen Tien Hoang [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08] - Topic: Coalitional games for NOMA-MEC computation offloading </p>
 </li>
-<li><p>Maurice Nduwayezu [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08] - Topic: deep reinforcement learning for NOMA-MEC computation offloading</p>
+<li><p>Maurice Nduwayezu [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08] - Topic: Deep reinforcement learning for NOMA-MEC computation offloading</p>
 </li>
 <li><p>Girmay Gebremariam Gebrelibanos [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08] - Topic: D2D communications with unlicensed spectrum</p>
 </li>
-<li><p>Akmal Azizan bin Md Zin [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08] - Topic: blockchain for smart healthcare applications</p>
+<li><p>Akmal Azizan bin Md Zin [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08] - Topic: Blockchain for smart healthcare applications</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-07 18:06:29 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-08 15:44:47 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
