--- a/supervision.html
+++ b/supervision.html
@@ -39,9 +39,9 @@
 </li>
 <li><p>2018 Spring: Convex Optimization</p>
 </li>
-<li><p>2017: Teaching assistant, COURSE: Android Programming</p>
+<li><p>2017: Teaching assistant, Course: Android Programming</p>
 </li>
-<li><p>2016: Teaching assistant, COURSE: Fundamentals of Java</p>
+<li><p>2016: Teaching assistant, Course: Fundamentals of Java</p>
 </li>
 </ul>
 <p></div></p>
@@ -80,7 +80,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-08 15:44:47 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-08 15:45:53 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
