--- a/activity.html
+++ b/activity.html
@@ -96,9 +96,11 @@
 </li>
 <li><p>IEEE Internet of Things Journal</p>
 </li>
+<li><p>IEEE Internet Computing</p>
+</li>
 <li><p>IEEE Communications Magazine</p>
 </li>
-<li><p>IEEE Wireless Communications</p>
+<li><p>IEEE Wireless Communications </p>
 </li>
 <li><p>IEEE Vehicular Technology Magazine</p>
 </li>
@@ -121,7 +123,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-07 18:04:47 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-08 15:46:49 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
