--- a/publication.html
+++ b/publication.html
@@ -96,8 +96,6 @@
 <ol>
 <li><p>M. Le, <b>Q.-V. Pham</b>, H.-C. Kim, and W.-J. Hwang, &ldquo;<a href="">Enhanced Resource Allocation in D2D Communications with NOMA and Unlicensed Spectrum</a>,&rdquo; <i>IEEE Systems Journal</i>, in press.</p>
 </li>
-<li><p>Q. V. Do, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9584850/">Deep Reinforcement Learning for Energy-Efficient Federated Learning in UAV-Enabled Wireless Powered Networks</a>,&rdquo; <i>IEEE Communications Letters</i>, in press.</p>
-</li>
 <li><p>B. M. ElHalawany, E. M. Mohamed, <b>Q.-V. Pham</b>, K. Wu, and AAA El-Banna, &ldquo;<a href="https://ieeexplore.ieee.org/document/9656772">Spectrum Sharing in Cognitive-Radio Inspired NOMA Systems under Imperfect SIC and Co-Channel Interference</a>,&rdquo; <i>IEEE Systems Journal</i>, in press.</p>
 </li>
 <li><p>H. Ta, <b>Q-V. Pham</b>, K. Ho-Van, and S. W. Kim, &ldquo;<a href="https://link.springer.com/article/10.1007/s11276-021-02828-3">Covert communication with noise and channel uncertainties</a>,&rdquo; <i>Wireless Networks</i>, in press.</p>
@@ -115,6 +113,8 @@
 <li><p>P. K. R. Maddikunta, <b>Q.-V. Pham</b>, B. Prabadevi, N. Deepa, K. Dev, T. R. Gadekallu, R. Ruby, and M. Liyanage, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S2452414X21000558">Industry 5.0: A Survey on Enabling Technologies and Potential Applications</a>,&rdquo; <i>Journal of Industrial Information Integration</i>, in press.</p>
 </li>
 <li><p>T. R. Gadekallu, <b>Q.-V. Pham</b>, D. C. Nguyen, P. K. R. Maddikunta, N. Deepa, B. Prabadevi, P. N. Pathirana, J. Zhao, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9569742">Blockchain for Edge of Things: Applications, Opportunities, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 9, no. 2, pp. 964-988, Jan. 2022.</p>
+</li>
+<li><p>Q. V. Do, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9584850/">Deep Reinforcement Learning for Energy-Efficient Federated Learning in UAV-Enabled Wireless Powered Networks</a>,&rdquo; <i>IEEE Communications Letters</i>, vol. 26, no. 1, pp. 99-103, Jan. 2022.</p>
 </li>
 </ol>
 <p></div></p>
@@ -286,7 +286,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-08 15:29:37 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-08 15:51:41 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
