--- a/publication.html
+++ b/publication.html
@@ -277,7 +277,7 @@
 <p><div id="Theses"></p>
 <h2>Theses</h2>
 <ul>
-<li><p>Q.-V. Pham, &ldquo;<a href="Archive/PHAM_PhD_Thesis.pdf">Fair and Energy-Efficient Resource Allocation Optimization in Wireless Networks</a>,&rdquo; PhD Thesis, Inje University, Aug. 2017. (Best PhD Award, Ranking</p>
+<li><p>Q.-V. Pham, &ldquo;<a href="Archive/PHAM_PhD_Thesis.pdf">Fair and Energy-Efficient Resource Allocation Optimization in Wireless Networks</a>,&rdquo; PhD Thesis, Inje University, Aug. 2017. (Best PhD Award, Ranking #1 in Engineering)</p>
 </li>
 <li><p>Q.-V. Pham &ldquo;<a href="Archive/PHAM_MS_Thesis.pdf">Multi-Timescale Cross-Layer Design in Wireless Multihop Networks</a>,&rdquo; M.S. Thesis, Inje University, Aug. 2015.</p>
 </li>
@@ -286,7 +286,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-01-08 15:51:41 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-01-08 17:24:49 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
