--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Research Professor, Ph.D. <br />
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p>[01/2022] Our work on <a href="https://ieeexplore.ieee.org/document/9569742">blockchain for edge of things</a> edge computing + IoT) has been published by the IEEE Internet of Things Journal. <br /></p>
+<li><p>[01/2022] Our work on <a href="https://ieeexplore.ieee.org/document/9569742">blockchain for edge of things</a> (edge computing + IoT) has been published by the IEEE Internet of Things Journal. <br /></p>
 </li>
 <li><p>[12/2021] I have received the golden globe award 2021 from the Ministry of Science and Technology, Vietnam. <br /></p>
 </li>
